# whisper-asr-webservice

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  LICENCE  README.md  docker-compose.gpu.yml  docker-compose.yml  example.env  pyproject.toml  up.sh
.github/workflows/: docker-publish.yml
app/: ffprobe.py  jobs.py  models.py  pipeline.py  segments.py  webservice.py
frontend/: app.py
frontend/static/: app.css  player.js
frontend/templates/: base.html  job.html  upload.html
tests/: test_ffprobe.py  test_jobs.py  test_models.py  test_segments.py
