[project]
name = "whisper-asr-webservice"
version = "2.0.0"
description = "Whisper ASR Webservice is a general-purpose speech recognition webservice powered by WhisperX."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Ahmet Öner" },
  { name = "Besim Alibegovic" },
  { name = "Jen McQuade" },
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "gunicorn>=23",
  "python-multipart>=0.0.12",
  "python-dotenv>=1.0",
  "ffmpeg-python>=0.2",
  "sse-starlette>=2.1",
  "jinja2>=3.1",
  "httpx>=0.27",
  "whisperx",
]

[project.urls]
Homepage = "https://github.com/jenmcquade/whisper-asr-webservice/"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperX" }

# Upstream whisperx uses a bare setuptools build backend; some transitive
# builds (faster-whisper, ctranslate2, pyannote deps) also expect setuptools
# to be available at build time. Pin a compatible setuptools for whisperx's
# editable build.
[tool.uv.extra-build-dependencies]
whisperx = ["setuptools>=65,<81"]

# Restrict universal resolution to platforms we actually ship for. This keeps
# conflicting transitive PyTorch index declarations in upstream whisperx out of
# unused environment splits (e.g. windows, macOS x86_64).
[tool.uv]
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
# torchcodec is a transitive dep of pyannote-audio>=4 but publishes no wheel
# (and no sdist) for linux/aarch64. Upstream whisperx declares the same
# override in its own pyproject.toml, but uv only honors override-dependencies
# from the root project, so we mirror it here. Diarization on linux/aarch64
# will be unavailable as a result; transcription and alignment still work.
override-dependencies = [
  "torchcodec>=0.6.0,<0.8.0; (sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32'",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
